<resources>
    <string name="app_name">Weightliflitngv2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_field">Error in the field</string>
    <string name="athlete_added">Athlete Added</string>
    <string name="error">Error: %1$s</string>
    <string name="title_activity_profile">Profile</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="are_you_a_coach">Are You A Coach?</string>
    <string name="save">SAVE</string>
    <string name="email">email</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="profile">PROFILE</string>
    <string name="todo">TODO</string>
    <string name="view">VIEW</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="update">Update</string>
    <string name="edit_athlete">Edit Athlete</string>
    <string name="name">name</string>
    <!--    embed something in the message as aa variable $-->
</resources>
